package com.eventsystem.domain.event;

public enum EventStatus {
    DRAFT,
    PUBLISHED,
    SOLD_OUT,
    CANCELLED,
    OVER
}